--- a/papers.html
+++ b/papers.html
@@ -2,7 +2,7 @@
 layout: default
 title: Call for Papers
 permalink: /papers/
-image: blog.jpg
+image: dna-dark.jpg
 ---
 
  {% include top-section.html %}
