--- a/speakers.html
+++ b/speakers.html
@@ -3,6 +3,7 @@ layout: default
 title: Keynote Speakers
 permalink: /speakers/
 modal: all
+image: dna-dark.jpg
 ---
 
 {% include top-section.html %}
